# bevygen

./: Cargo.toml  README.md
.github/workflows/: release.yaml
examples/: coolors.rs
src/: TODO.md  lib.rs  main.rs  wizard.rs
src/color/: README.md  mod.rs  tailwind.rs
tests/: colors.rs
