[package]
name = "bevygen"
description = "parked: opinionated bevy game design cli"
version = "0.0.0"
edition = "2024"
authors = ["dsgallups <dsgallups@protonmail.com>"]
repository = "https://github.com/dsgallups/bevygen"
documentation = "https://docs.rs/bevygen"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
