[package]
name = "bevygen"
description = "parked: opinionated bevy game design cli"
version = "0.1.0"
edition = "2024"
authors = ["dsgallups <dsgallups@protonmail.com>"]
repository = "https://github.com/dsgallups/bevygen"
documentation = "https://docs.rs/bevygen"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
fnv = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["derive", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.94"
prettyplease = "0.2.32"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dialoguer = "0.11.0"

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_color"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
pkg-fmt = "bin"
